# ML_stock_forecast

./: .gitignore  README.md  orderbook.csv  output.xlsx  output_3.xlsx  output_실시간체결가.xlsx  output_실시간호가.xlsx  pyproject.toml  ~$output.xlsx
DataLoader/: KIS_dataloader.py  domestic_stock_examples_ws.py  domestic_stock_functions_ws.py  kis_auth.py  overseas_stock_examples_ws.py  overseas_stock_functions_ws.py  test.py
WebSearch/: start.py
baseline/: basemodel_.ipynb  deep-research-report.md
baseline/PoC/1_crawling/: 1_crawling.ipynb  final_report.md  prompts.py
baseline/PoC/2_embedding/: 2_embedding.ipynb  README.md  ontology.py  test.ipynb
baseline/basemodel_outputs/: graph_payload.json
graph/: schema_extraction.py  test.py
graph/src/: analyst.py  callback.py  ontology.json  prompts.py  tools.py
graph/src/skills/lang-cypher-dev/: PATTERNS.md  SKILL.md
test/: DataScrapping.ipynb  crawl2db.ipynb
test/LLM/: langchain_test.ipynb  openai_test.py  test.py
test/deep_research/: README.md  pyproject.toml  research_agent.ipynb
test/deep_research/deep_research_example.egg-info/: PKG-INFO  requires.txt
test/deep_research/research_agent/: tools.py
test/langchain/: crawl2db.ipynb
test/neo4j_test/: graphrag.py  start.ipynb
test/rag/: tiny_rag.py
test/skill/: sql_assistant.ipynb
