[project]
name = "ml-stock-forecast"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "beautifulsoup4>=4.15.0",
    "dateparser>=1.4.1",
    "huggingface-hub>=1.21.0",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.6.0",
    "kiwipiepy>=0.23.2",
    "kss>=6.0.6",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.6",
    "nbconvert>=7.17.1",
    "neo4j>=6.2.0",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "pyshacl>=0.31.0",
    "rdflib>=7.6.0",
    "spacy>=3.8.14",
    "torch>=2.12.1",
    "trafilatura>=2.1.0",
    "transformers>=5.12.1",
]
